--- a/PORTFOLIO/styles.css
+++ b/PORTFOLIO/styles.css
@@ -119,7 +119,7 @@ body {
 
 .skills-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+ grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
 }
 
@@ -127,11 +127,9 @@ body {
   background-color: rgb(98, 98, 236);
   padding: 30px;
   border-radius: 12px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .skill-card:hover {
-  transform: translateY(-10px);
   box-shadow: 0 10px 25px rgba(0,0,0,0.4);
 }
 
@@ -149,4 +147,39 @@ body {
 .skill-card li {
   padding: 6px 0;
   font-size: 1.1rem;
+}
+
+.contact {
+  min-height: 60vh;
+  padding: 120px 5% 80px;
+  background-color: rgb(70, 70, 71);
+  color: whitesmoke;
+  text-align: center;
+}
+
+.contact .section-title {
+  font-size: 3rem;
+  color: rgb(241, 92, 92);
+  margin-bottom: 30px;
+}
+
+.contact p {
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+}
+
+.contact-icons {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.contact-icon {
+  color: #fff;
+  font-size: 2.5rem;
+}
+
+.contact-icon:hover {
+  color: rgb(241, 92, 92);
+  transform: scale(1.2);
 }
