--- a/Day-2/PORTFOLIO/styles.css
+++ b/Day-2/PORTFOLIO/styles.css
@@ -105,7 +105,7 @@ body {
 
 .skills {
   min-height: 70vh;
-  padding: 80px 5% 80px;
+  padding: 80px 80px;
   background-color: rgb(70, 70, 71);
   color: whitesmoke;
 }
