--- a/Day-2/PORTFOLIO/styles.css
+++ b/Day-2/PORTFOLIO/styles.css
@@ -56,25 +56,20 @@ body {
 }
 
 .home-image {
-   
-     width: 350px;
-     height: 350px;
-      border-radius: 50%;
-    overflow: hidden;
-    border: 4px solid rgb(227, 74, 74);
-    box-shadow: 0 10px 30px rgba(0,0,0,0.4);
-     flex-shrink: 0;
-    
+  margin-right: 50px;
+  width: 350px;
+  height: 350px;
+  padding-top: 30px;
+  border-radius: 50%;
+  background-image: url("./images/sneha.png");
+  background-size: cover;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  border: 4px solid rgb(227, 74, 74);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+  flex-shrink: 0;
 }
 
-.home-image img{
-    
-   width: 100%;
-  height: 100%;
-  object-fit: cover; 
-  display: block;
-
-}
 
 .about-text {
   flex: 1;
