--- a/Day-2/PORTFOLIO/styles.css
+++ b/Day-2/PORTFOLIO/styles.css
@@ -11,6 +11,10 @@ body {
   background-color: rgb(241, 92, 92);
   width: 100%;
   height: 80px;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  z-index: 1000;
 }
 
 .nav_bar ul {
@@ -18,11 +22,14 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  gap: 100px;
+  
 }
 
 .nav_bar li {
+  margin-right: 100px;
   display: inline;
-  padding: 1em 1em;
+  padding: 1em 2em;
   height: 50px;
 }
 
@@ -32,18 +39,22 @@ body {
 }
 
 .nav_bar li:hover,
-.nav_bar li:focus {
+.nav_bar li:focus-visible {
   background-color: rgb(98, 98, 236);
 }
 
+.nav_links.active{
+  background-color:  rgb(98, 98, 236);
+}
+
 .home {
-  height: 80vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   background-color: rgb(70, 70, 71);
   justify-content: center;
   align-items: center;
-  padding-top: 60px;
+  padding-top: 80px;
 }
 
 .home-content {
@@ -99,8 +110,8 @@ body {
 }
 
 .skills {
-  min-height: 70vh;
-  padding: 180px 80px;
+  min-height: 100vh;
+  padding: 100px 60px;
   background-color: rgb(70, 70, 71);
   color: whitesmoke;
 }
@@ -145,8 +156,8 @@ body {
 }
 
 .contact {
-  min-height: 60vh;
-  padding: 20px 80px;
+  min-height: 100vh;
+  padding: 100px 60px;
   background-color: rgb(70, 70, 71);
   color: whitesmoke;
   text-align: center;
