--- a/easycart/css/auth.css
+++ b/easycart/css/auth.css
@@ -156,7 +156,6 @@
   font-size: 0.9rem;
 }
 
-
 /* Input Field Styling */
 .form-group {
   margin-bottom: 1rem;
@@ -179,6 +178,18 @@
   background: #fff;
   outline: none;
   box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
+}
+
+/* Hide Browser Default Password Toggle */
+input::-ms-reveal,
+input::-ms-clear {
+  display: none;
+}
+input::-webkit-credentials-auto-fill-button {
+  visibility: hidden;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
 }
 
 /* Password Toggle Icon */
